fixed flicker issue (view transitions still don't work yet though)

--- a/assets/input.css
+++ b/assets/input.css
@@ -2,6 +2,53 @@
 @tailwind components;
 @tailwind utilities;
 
+/* -------------------------------------------------------------------------------------------------------- */
+
+@view-transition {
+  navigation: auto;
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+}
+
+@keyframes fade-out {
+  to {
+    opacity: 0;
+  }
+}
+
+@keyframes slide-from-right {
+  from {
+    transform: translateX(90px);
+  }
+}
+
+@keyframes slide-to-left {
+  to {
+    transform: translateX(-90px);
+  }
+}
+
+.slide-it {
+  view-transition-name: slide-it;
+}
+
+::view-transition-old(slide-it) {
+  animation:
+    180ms cubic-bezier(0.4, 0, 1, 1) both fade-out,
+    600ms cubic-bezier(0.4, 0, 0.2, 1) both slide-to-left;
+}
+::view-transition-new(slide-it) {
+  animation:
+    420ms cubic-bezier(0, 0, 0.2, 1) 90ms both fade-in,
+    600ms cubic-bezier(0.4, 0, 0.2, 1) both slide-from-right;
+}
+
+/* -------------------------------------------------------------------------------------------------------- */
+
 /* for development only */
 /* .htmx-request { */
 /*   background-color: red; */
@@ -18,11 +65,8 @@
 .htmx-request.htmx-indicator {
   opacity: 1;
 }
-/* https://youtu.be/x7v6SNIgJpE?si=QUubqHEuChMQd9ho&t=6176 */
-.htmx-swapping {
-  opacity: 0;
-  transition: opacity 500ms ease-in;
-}
+
+/* -------------------------------------------------------------------------------------------------------- */
 
 @font-face {
   font-family: "Shantell Sans";
