--- a/assets/output.css
+++ b/assets/output.css
@@ -2244,19 +2244,14 @@ input.tab:checked + .tab-content,
   line-height: 1;
 }
 
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .lowercase {
@@ -2306,6 +2301,54 @@ input.tab:checked + .tab-content,
   transition-duration: 75ms;
 }
 
+/* -------------------------------------------------------------------------------------------------------- */
+
+@view-transition {
+  navigation: auto;
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+}
+
+@keyframes fade-out {
+  to {
+    opacity: 0;
+  }
+}
+
+@keyframes slide-from-right {
+  from {
+    transform: translateX(90px);
+  }
+}
+
+@keyframes slide-to-left {
+  to {
+    transform: translateX(-90px);
+  }
+}
+
+.slide-it {
+  view-transition-name: slide-it;
+}
+
+::view-transition-old(slide-it) {
+  animation:
+    180ms cubic-bezier(0.4, 0, 1, 1) both fade-out,
+    600ms cubic-bezier(0.4, 0, 0.2, 1) both slide-to-left;
+}
+
+::view-transition-new(slide-it) {
+  animation:
+    420ms cubic-bezier(0, 0, 0.2, 1) 90ms both fade-in,
+    600ms cubic-bezier(0.4, 0, 0.2, 1) both slide-from-right;
+}
+
+/* -------------------------------------------------------------------------------------------------------- */
+
 /* for development only */
 
 /* .htmx-request { */
@@ -2329,12 +2372,7 @@ input.tab:checked + .tab-content,
   opacity: 1;
 }
 
-/* https://youtu.be/x7v6SNIgJpE?si=QUubqHEuChMQd9ho&t=6176 */
-
-.htmx-swapping {
-  opacity: 0;
-  transition: opacity 500ms ease-in;
-}
+/* -------------------------------------------------------------------------------------------------------- */
 
 @font-face {
   font-family: "Shantell Sans";
